# low-memory-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
doc/: arch.md  data.txt
src/: CMakeLists.txt  calculator.c  main.c  main.h  math.c  math.h
src/math/: add.h  div.h  mul.h  pow.h  sqrt.h  sub.h
src/misc/: logic.h  shift.h  util.h
src/parse/: expr.h  num.h
test/: CMakeLists.txt  test-add.c  test-div.c  test-mul.c  test-pow.c  test-sqrt.c  test-sub.c
