add_executable (test-add
    test-add.c)
add_test(test-add test-add)

add_executable (test-sub
    test-sub.c)
add_test(test-sub test-sub)

add_executable (test-mul
    test-mul.c)
add_test(test-mul test-mul)

add_executable (test-div
    test-div.c)
add_test(test-div test-div)

add_executable (test-pow
    test-pow.c)
add_test(test-pow test-pow)

add_executable (test-sqrt
    test-sqrt.c)
add_test(test-sqrt test-sqrt)
